--- a/Draw/Controller/Shop/VendingController.xib
+++ b/Draw/Controller/Shop/VendingController.xib
@@ -43,14 +43,13 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="713539296"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">wood_bg@2x.png</string>
+							<string key="NSResourceName">wood_shop_bg@2x.png</string>
 						</object>
 					</object>
 					<object class="IBUIScrollView" id="792382614">
@@ -66,7 +65,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrameSize">{307, 338}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="396263088"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -81,7 +79,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{5, 69}, {297, 54}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="276348225"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -96,7 +93,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{5, 171}, {297, 54}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="711677905"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -108,7 +104,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{5, 270}, {297, 55}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="792334924"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -118,7 +113,6 @@
 								</array>
 								<string key="NSFrameSize">{307, 338}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="185083813"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="432984982">
@@ -132,7 +126,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24.5, 23}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="270631237"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -147,7 +140,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24.5, 125}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="113605286"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -159,7 +151,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24.5, 223}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="833121197"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -171,7 +162,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{122.5, 23}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="58454433"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -183,7 +173,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{221.5, 23}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="338791629"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -195,7 +184,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{23, 89}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="86274896"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -210,7 +198,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{45, 89}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="791406378"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -241,7 +228,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{23, 191}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="373843065"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -253,7 +239,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{45, 191}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="142699992"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -274,7 +259,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{23, 290}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="207098718"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -286,7 +270,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{45, 290}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="19251433"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -307,7 +290,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{121, 89}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="82807652"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -319,7 +301,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{143, 89}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="412827066"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -340,7 +321,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{220, 89}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="591335896"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -352,7 +332,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{242, 89}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="983130616"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -371,7 +350,6 @@
 						</array>
 						<string key="NSFrame">{{7, 53}, {307, 338}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="562959135"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="432984982"/>
@@ -384,7 +362,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{7, 6}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="322271871"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -422,7 +399,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{59, 0}, {202, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="792382614"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -437,7 +413,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{7, 404}, {115, 46}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="622926089"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -452,7 +427,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{130, 409}, {95, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="151623773"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="432984982"/>
@@ -485,7 +459,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{130, 413}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="427970999"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -500,7 +473,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{232, 408}, {82, 38}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -523,7 +495,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{46, 407}, {36, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="146562100"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -532,7 +503,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="708246902"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -846,26 +816,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">43</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PPViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">VendingController</string>
-					<string key="superclassName">PPViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/VendingController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -884,7 +835,7 @@
 			<string key="shopping_bg@2x.png">{589, 730}</string>
 			<string key="small_coin@2x.png">{27, 27}</string>
 			<string key="tomato@2x.png">{122, 122}</string>
-			<string key="wood_bg@2x.png">{640, 960}</string>
+			<string key="wood_shop_bg@2x.png">{640, 960}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
