--- a/Draw/Controller/Shop/VendingController~ipad.xib
+++ b/Draw/Controller/Shop/VendingController~ipad.xib
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="424085961"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -65,6 +66,7 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrameSize">{736, 785}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="779750223"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -79,6 +81,7 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{12, 150}, {712, 117}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="416091545"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -93,6 +96,7 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{12, 390}, {712, 117}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1012386690"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -104,6 +108,7 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{12, 628}, {712, 120}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="401141872"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -115,6 +120,7 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{96, 196}, {34, 34}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="240215377"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -129,6 +135,7 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{138, 194}, {100, 37}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="369374152"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -159,6 +166,7 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{108, 673}, {100, 37}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="111807258"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -179,6 +187,7 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{309, 194}, {40, 37}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="482694725"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -190,6 +199,7 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{69, 63.5}, {122, 122}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1017402077"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -202,6 +212,7 @@
 								</array>
 								<string key="NSFrameSize">{736, 785}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="400034732"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="262949035">
@@ -215,6 +226,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{57, 298}, {146, 133}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="572181171"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -226,6 +238,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{57, 529}, {146, 133}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="134006236"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -237,6 +250,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{304, 63.5}, {122, 122}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="770080089"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -248,6 +262,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{529, 58}, {146, 133}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="46949767"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -259,6 +274,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{55, 436}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="990210300"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -270,6 +286,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{108, 434}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="238489920"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -290,6 +307,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{55, 673}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="516899176"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -301,6 +319,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{359, 192}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="240110667"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -321,6 +340,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{551, 194}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="776405328"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -332,6 +352,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{601, 194}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="741407424"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -350,6 +371,7 @@
 						</array>
 						<string key="NSFrame">{{16, 89}, {736, 785}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="779889756"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="262949035"/>
@@ -362,6 +384,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{16, 13}, {88, 80}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="598108438"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -399,6 +422,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{225.5, 16}, {317, 66}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="493068356"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -413,6 +437,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{16, 881}, {276, 117}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="352309208"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -427,6 +452,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{312, 908}, {228, 65}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="101527790"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="262949035"/>
@@ -457,8 +483,9 @@
 					<object class="IBUIImageView" id="101527790">
 						<reference key="NSNextResponder" ref="945896182"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{316, 915}, {57, 52}}</string>
+						<string key="NSFrame">{{318.5, 917}, {48, 48}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="470260798"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -473,6 +500,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{556, 908}, {196, 65}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -501,6 +529,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{110, 880}, {86, 78}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="776394169"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -509,6 +538,7 @@
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="594593148"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -561,6 +591,24 @@
 						<reference key="destination" ref="352309208"/>
 					</object>
 					<int key="connectionID">74</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">buyCoin:</string>
+						<reference key="source" ref="470260798"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">75</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickBack:</string>
+						<reference key="source" ref="424085961"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">76</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -810,9 +858,52 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">74</int>
+			<int key="maxID">76</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">PPViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">VendingController</string>
+					<string key="superclassName">PPViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="buyCoinButton">UIButton</string>
+						<string key="coinsButton">UIButton</string>
+						<string key="itemListScrollView">UIScrollView</string>
+						<string key="outItem">UIImageView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="buyCoinButton">
+							<string key="name">buyCoinButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="coinsButton">
+							<string key="name">coinsButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="itemListScrollView">
+							<string key="name">itemListScrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="outItem">
+							<string key="name">outItem</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/VendingController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
